                                                        -*- coding: utf-8 -*-
Changes with Apache 2.3.0
  [Remove entries to the current 2.0 and 2.2 section below, when backported]

  *) mod_so: Solve dev's confusion by reporting expected/seen module
     magic signatures when failing with a 'garbled' message, and solve
     user's confusion by pointing out 'perhaps compiled for a different
     version of apache?'.  [William Rowe]

  *) mod_ssl: Version reporting update; displays 'compiled against'
     Apache and build-time SSL Library versions at loglevel [info],
     while reporting the run-time SSL Library version in the server
     info tags.  Helps to identify a mod_ssl built against one flavor
     of OpenSSL but running against another (also adds SSL-C version
     number reporting.)  [William Rowe]

  *) core: Change etag generation to produce identical results on 
     32-bit and 64-bit platforms.  PR 40064.  [Joe Orton]

  *) ab: Add -r option to continue after socket receive errors. 
     [Filip Hanik <devlist hanik.com>]

  *) mod_ldap: Fix the search limit parameter to ldap_search_ext_s()
     for SDKs that define LDAP_NO_LIMIT to something other than -1.
     [David Jones <oscaremma gmail.com>]

  *) mod_cache: Use the same cache key throughout the whole request processing
     to handle escaped URLs correctly.  PR 41475. [Ruediger Pluem]

  *) mod_cache: Add CacheIgnoreQueryString directive.  PR 41484.
     [Fredrik Widlund <fredrik.widlund qbrick.com>]

  *) mod_dbd: Introduce configuration groups to allow inheritance by virtual
     hosts of database configurations from the main server.  Determine the
     minimal set of distinct configurations and share connection pools
     whenever possible.  Allow virtual hosts to override inherited SQL
     statements.  PR 41302.  [Chris Darroch]

  *) core: Fix broken chunk filtering that causes all non blocking reads to be
     converted into blocking reads.  PR 41056. [Jean-Frederic Clere, Jim Jagielski]
